<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registertitle"
        android:text="@string/register"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_margin="25dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/registertitle"
        android:background="#30ffffff"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@id/username"
        android:background="#30ffffff"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:background="#30ffffff"
        android:hint="@string/Password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_info_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repassword"
        android:layout_below="@id/password"
        android:background="#30ffffff"
        android:hint="@string/Repassword"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_info_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aadhaar"
        android:layout_below="@id/repassword"
        android:background="#30ffffff"
        android:hint="@string/Aadhaarnumber"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawablePadding="20dp"
        android:inputType="number"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupbtn"
        android:text="@string/Registerhere"
        android:textSize="25sp"
        android:layout_below="@id/aadhaar"
        android:layout_centerHorizontal="true"
        app:backgroundTint="@color/design_default_color_on_secondary"
        android:layout_margin="20sp"/>












</RelativeLayout>